@@ -1,5 +1,5 @@
 /*
- * Copyright 2020-2024 IEXEC BLOCKCHAIN TECH
+ * Copyright 2020-2025 IEXEC BLOCKCHAIN TECH
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,12 +16,11 @@
 
 package com.iexec.worker.chain;
 
-
-import com.iexec.common.contribution.Contribution;
 import com.iexec.common.lifecycle.purge.Purgeable;
 import com.iexec.commons.poco.chain.*;
 import com.iexec.commons.poco.contract.generated.IexecHubContract;
 import com.iexec.worker.config.ConfigServerConfigurationService;
+import jakarta.annotation.PreDestroy;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -30,19 +29,16 @@ import org.web3j.protocol.core.RemoteCall;
 import org.web3j.protocol.core.methods.response.Log;
 import org.web3j.protocol.core.methods.response.TransactionReceipt;
 
-import javax.annotation.PreDestroy;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.*;
-import java.util.stream.Collectors;
 
 import static com.iexec.commons.poco.chain.ChainContributionStatus.CONTRIBUTED;
 import static com.iexec.commons.poco.chain.ChainContributionStatus.REVEALED;
 import static com.iexec.commons.poco.utils.BytesUtils.bytesToString;
 import static com.iexec.commons.poco.utils.BytesUtils.stringToBytes;
-
 
 @Slf4j
 @Service
@@ -69,20 +65,20 @@ public class IexecHubService extends IexecHubAbstractService implements Purgeabl
 
     // region contribute
     IexecHubContract.TaskContributeEventResponse contribute(final Contribution contribution) {
-        log.info("contribute request [chainTaskId:{}, waitingTxCount:{}]", contribution.getChainTaskId(), getWaitingTransactionCount());
+        log.info("contribute request [chainTaskId:{}, waitingTxCount:{}]", contribution.chainTaskId(), getWaitingTransactionCount());
         return sendContributeTransaction(contribution);
     }
 
     private IexecHubContract.TaskContributeEventResponse sendContributeTransaction(final Contribution contribution) {
-        final String chainTaskId = contribution.getChainTaskId();
+        final String chainTaskId = contribution.chainTaskId();
 
         final RemoteCall<TransactionReceipt> contributeCall = iexecHubContract.contribute(
                 stringToBytes(chainTaskId),
-                stringToBytes(contribution.getResultHash()),
-                stringToBytes(contribution.getResultSeal()),
-                contribution.getEnclaveChallenge(),
-                stringToBytes(contribution.getEnclaveSignature()),
-                stringToBytes(contribution.getWorkerPoolSignature()));
+                stringToBytes(contribution.resultHash()),
+                stringToBytes(contribution.resultSeal()),
+                contribution.enclaveChallenge(),
+                stringToBytes(contribution.enclaveSignature()),
+                stringToBytes(contribution.workerPoolSignature()));
         log.info("Sent contribute [chainTaskId:{}, contribution:{}]", chainTaskId, contribution);
 
         final TransactionReceipt contributeReceipt = submit(chainTaskId, "contribute", contributeCall);
@@ -91,7 +87,7 @@ public class IexecHubService extends IexecHubAbstractService implements Purgeabl
                 IexecHubContract.getTaskContributeEvents(contributeReceipt).stream()
                         .filter(event -> Objects.equals(bytesToString(event.taskid), chainTaskId)
                                 && Objects.equals(event.worker, signerService.getAddress()))
-                        .collect(Collectors.toList());
+                        .toList();
         log.debug("contributeEvents count {} [chainTaskId: {}]", contributeEvents.size(), chainTaskId);
 
         if (!contributeEvents.isEmpty()) {
@@ -126,7 +122,7 @@ public class IexecHubService extends IexecHubAbstractService implements Purgeabl
                 IexecHubContract.getTaskRevealEvents(revealReceipt).stream()
                         .filter(event -> Objects.equals(bytesToString(event.taskid), chainTaskId)
                                 && Objects.equals(event.worker, signerService.getAddress()))
-                        .collect(Collectors.toList());
+                        .toList();
         log.debug("revealEvents count {} [chainTaskId:{}]", revealEvents.size(), chainTaskId);
 
         if (!revealEvents.isEmpty()) {
@@ -147,25 +143,25 @@ public class IexecHubService extends IexecHubAbstractService implements Purgeabl
     public Optional<ChainReceipt> contributeAndFinalize(final Contribution contribution, final String resultLink,
                                                         final String callbackData) {
         log.info("contributeAndFinalize request [chainTaskId:{}, waitingTxCount:{}]",
-                contribution.getChainTaskId(), getWaitingTransactionCount());
+                contribution.chainTaskId(), getWaitingTransactionCount());
         final IexecHubContract.TaskFinalizeEventResponse finalizeEvent = sendContributeAndFinalizeTransaction(contribution, resultLink, callbackData);
         return Optional.ofNullable(finalizeEvent)
-                .map(event -> ChainUtils.buildChainReceipt(event.log, contribution.getChainTaskId(), getLatestBlockNumber()));
+                .map(event -> ChainUtils.buildChainReceipt(event.log, contribution.chainTaskId(), getLatestBlockNumber()));
     }
 
     private IexecHubContract.TaskFinalizeEventResponse sendContributeAndFinalizeTransaction(final Contribution contribution,
                                                                                             final String resultLink,
                                                                                             final String callbackData) {
-        final String chainTaskId = contribution.getChainTaskId();
+        final String chainTaskId = contribution.chainTaskId();
 
         final RemoteCall<TransactionReceipt> contributeAndFinalizeCall = iexecHubContract.contributeAndFinalize(
                 stringToBytes(chainTaskId),
-                stringToBytes(contribution.getResultDigest()),
+                stringToBytes(contribution.resultDigest()),
                 StringUtils.isNotEmpty(resultLink) ? resultLink.getBytes(StandardCharsets.UTF_8) : new byte[0],
                 StringUtils.isNotEmpty(callbackData) ? stringToBytes(callbackData) : new byte[0],
-                contribution.getEnclaveChallenge(),
-                stringToBytes(contribution.getEnclaveSignature()),
-                stringToBytes(contribution.getWorkerPoolSignature()));
+                contribution.enclaveChallenge(),
+                stringToBytes(contribution.enclaveSignature()),
+                stringToBytes(contribution.workerPoolSignature()));
         log.info("Sent contributeAndFinalize [chainTaskId:{}, contribution:{}, resultLink:{}, callbackData:{}]",
                 chainTaskId, contribution, resultLink, callbackData);
 
@@ -174,7 +170,7 @@ public class IexecHubService extends IexecHubAbstractService implements Purgeabl
         final List<IexecHubContract.TaskFinalizeEventResponse> finalizeEvents =
                 IexecHubContract.getTaskFinalizeEvents(receipt).stream()
                         .filter(event -> Objects.equals(bytesToString(event.taskid), chainTaskId))
-                        .collect(Collectors.toList());
+                        .toList();
         log.debug("finalizeEvents count {} [chainTaskId:{}]", finalizeEvents.size(), chainTaskId);
 
         if (!finalizeEvents.isEmpty()) {
@@ -256,16 +252,6 @@ public class IexecHubService extends IexecHubAbstractService implements Purgeabl
 
     public long getLatestBlockNumber() {
         return web3jService.getLatestBlockNumber();
-    }
-
-    boolean isChainTaskActive(final String chainTaskId) {
-        final Optional<ChainTask> chainTask = getChainTask(chainTaskId);
-        return chainTask.filter(task -> task.getStatus() == ChainTaskStatus.ACTIVE).isPresent();
-    }
-
-    boolean isChainTaskRevealing(final String chainTaskId) {
-        final Optional<ChainTask> chainTask = getChainTask(chainTaskId);
-        return chainTask.filter(task -> task.getStatus() == ChainTaskStatus.REVEALING).isPresent();
     }
 
     @Override
